--- a/package.json
+++ b/package.json
@@ -8,9 +8,16 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "canvas-waves": "^2.1.2",
     "core-js": "^2.6.5",
+    "less": "^3.10.3",
+    "less-loader": "^5.0.0",
+    "mint-ui": "^2.2.13",
     "normalize.css": "^8.0.1",
+    "px2rem-loader": "^0.1.9",
     "vue": "^2.6.10",
+    "vue-clipboard2": "^0.3.1",
+    "vue-cordova": "^0.1.2",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
   },
@@ -19,6 +26,11 @@
     "@types/vue": "^2.0.0",
     "@vue/cli-plugin-babel": "^3.9.0",
     "@vue/cli-service": "^3.9.0",
+    "babel-plugin-component": "^1.1.1",
+    "mockjs": "^1.0.1-beta3",
+    "px2rem": "^0.5.0",
+    "style-resources-loader": "^1.2.1",
+    "vue-cli-plugin-style-resources-loader": "^0.1.3",
     "vue-template-compiler": "^2.6.10"
   },
   "postcss": {
