--- a/mock/package.json
+++ b/mock/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "express-cors": "0.0.3"
+    "express-cors": "0.0.3",
+    "jsonwebtoken": "^8.5.1"
   }
 }
