--- a/mock/package.json
+++ b/mock/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "doc": "raml2html ./doc/api.raml > ./public/index.html"
   },
   "keywords": [],
   "author": "",
@@ -13,5 +14,9 @@
     "express": "^4.17.1",
     "express-cors": "0.0.3",
     "jsonwebtoken": "^8.5.1"
+  },
+  "devDependencies": {
+    "raml2html": "^7.4.0",
+    "raml2html-markdown-theme": "^1.0.2"
   }
 }
